[gd_scene load_steps=2 format=3 uid="uid://dl22jep2f0fg1"]

[ext_resource type="Script" uid="uid://bg84bukdlp78s" path="res://scripts/confirm_dialog.gd" id="1_sjrqf"]

[node name="ConfirmDialog" type="Window"]
disable_3d = true
oversampling_override = 1.0
title = "Biztos vagy benne?"
initial_position = 1
size = Vector2i(300, 160)
transient = true
exclusive = true
script = ExtResource("1_sjrqf")

[node name="MessageLabel" type="Label" parent="."]
offset_left = 22.0
offset_top = 16.0
offset_right = 278.0
offset_bottom = 59.0
text = "Véglegesen törlődik, nem vonható vissza!"
vertical_alignment = 1
autowrap_mode = 3

[node name="CancelButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 40)
offset_left = 30.0
offset_top = 104.0
offset_right = 110.0
offset_bottom = 144.0
text = "Mégse"

[node name="OkButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 40)
offset_left = 190.0
offset_top = 104.0
offset_right = 270.0
offset_bottom = 144.0
text = "OK"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="OkButton" to="." method="_on_ok_button_pressed"]
